// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReusableSections DonateSection 1`] = `
<section
  className="DonateSection Section slate"
  style={
    Object {
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/background_flag.jpg",
    }
  }
>
  <h2
    className="Heading white"
    id=""
  >
    Donate
  </h2>
  <div
    className="content "
  >
    <div
      className="donateText"
    >
      <p>
        As a 501(c)(3) veteran-led nonprofit organization, our programs and services are maintained through the efforts of our volunteer staff. Your financial support allows us to continue helping the military community learn software development, enter the tech industry, and code the future.
      </p>
      <p>
        Thank you for supporting our mission!
      </p>
      <button
        className="Button primary"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <a
          className=""
          href="https://secure.lglforms.com/form_engine/s/BRtP7QUKyHOyEYsZROsRew"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            className="screenReaderOnly"
          >
            Opens in new window
          </span>
          Donate Now
          <test-file-mock
            className="externalLinkIcon"
          />
        </a>
      </button>
    </div>
  </div>
</section>
`;

exports[`Storyshots ReusableSections JoinSection 1`] = `
<section
  className="JoinSection Section white"
  style={
    Object {
      "backgroundImage": "url(https://s3.amazonaws.com/operationcode-assets/background_marching-troops.jpg",
    }
  }
>
  <h2
    className="Heading slate"
    id=""
  >
    Join Today!
  </h2>
  <div
    className="content "
  >
    <div
      className="joinText"
    >
      <p>
        Operation Code is leading the way to expand opportunities for military veterans and their families to learn new skills, and build a career in the fast-growing technology sector.
      </p>
      <p>
        Join our community for free and jumpstart your skills today!
      </p>
      <button
        className="Button secondary"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <a
          href="/join"
          onClick={[Function]}
        >
          Join
        </a>
      </button>
    </div>
  </div>
</section>
`;

exports[`Storyshots ReusableSections SignUpSection 1`] = `
<section
  className="Section white"
  style={Object {}}
>
  <h2
    className="Heading slate headingLines"
    id=""
  >
    New user?
  </h2>
  <div
    className="content "
  >
    <p>
      Are you ready to deploy your future? Join Operation Code today and launch your career in software development. Once you complete the form below, you’ll be invited to join our team on Slack. Make sure you stop in and say hi!
    </p>
    <button
      className="Button secondary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        href="/signup"
        onClick={[Function]}
      >
        Sign Up
      </a>
    </button>
  </div>
</section>
`;
